refactor(recipe): 优化配方组件中的 TagKey 解析逻辑
- 在 BlockStatePredicate、ItemIngredientPredicate 和 ItemPredicate 类中，将 TagKey 解析逻辑从 getOrThrow 改为 get 方法
- 优化了异常处理，提高了代码的健壮性
- 调整了部分代码格式，提高了可读性